--- a/index ayo.html
+++ b/index ayo.html
@@ -63,7 +63,8 @@
 								</header>
 								<a href="" class="image main"><img src="images/IFC handbook.png" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="" class="button large">View projects</a></li>
+									<li><a href="" class="button large">View projects</a>
+                                        CAO Handbook (Eligibility Section)</li>
 								</ul>
 							</article>
 
