--- a/index ayo.html
+++ b/index ayo.html
@@ -63,8 +63,9 @@
 								</header>
 								<a href="" class="image main"><img src="images/IFC handbook.png" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="" class="button large">View projects</a>
-                                        CAO Handbook (Eligibility Section)</li>
+									<li><a href="
+                                        Chttps://studentsbowiestate-my.sharepoint.com/:w:/g/personal/awobiyia0928_students_bowiestate_edu/Ed8iWRRu7pRNt4bXqg4ZOSoBYBhR-Y5iI6uE1VsrJjtJJQ?rtime=ns0z84nL20g" class="button large">View projects</a>
+                                        </li>
 								</ul>
 							</article>
 
